--- a/costmap_update/CMakeLists.txt
+++ b/costmap_update/CMakeLists.txt
@@ -24,8 +24,8 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #common commands for building c++ executables and libraries
 #rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
 #target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
+rosbuild_add_boost_directories()
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
-rosbuild_add_executable(costmap_update src/costmap_update.cpp)
+rosbuild_add_executable(${PROJECT_NAME} src/costmap_update.cpp)
+rosbuild_link_boost(${PROJECT_NAME} thread signals)
