--- a/robot_launch/configs/costmap_common_params.yaml
+++ b/robot_launch/configs/costmap_common_params.yaml
@@ -8,9 +8,11 @@ footprint: [[0.305, 0.278], [0.04, 0.193], [-0.04, 0.193], [-0.282, 0.178], [-0.
 
 inflation_radius: 0.1
 
-observation_sources: laser_scan_sensor
+observation_sources: laser_scan_sensor camera
 
 laser_scan_sensor: {sensor_frame: base_laser_link, data_type: LaserScan, topic: base_scan, marking: true, clearing: true}
+
+camera : {sensor_frame: camera_depth_frame, data_type: PointCloud, topic: point_cloud_topic, marking: true, clearing: false}
 
 map_type: costmap
 transform_tolerance: 0.4 #seconds
