--- a/robot_launch/configs/costmap_common_params.yaml
+++ b/robot_launch/configs/costmap_common_params.yaml
@@ -6,7 +6,7 @@ raytrace_range: 3.0
 #footprint: [[-0.325, -0.325], [-0.325, 0.325], [0.325, 0.325], [0.46, 0.0], [0.325, -0.325]]
 
 footprint: [[0.305, 0.278], [0.04, 0.193], [-0.04, 0.193], [-0.282, 0.178], [-0.282, -0.178], [-0.04, -0.193], [0.04, -0.193], [0.305, -0.278]]
-#robot_radius: ir_of_robot
+#robot_radius: 0.4
 
 #Cost function parameters
 inflation_radius: 0.1
