Basic RRTPlanner working

--- a/nice_global_planner/tests/rrttest/CMakeLists.txt
+++ b/nice_global_planner/tests/rrttest/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
+set(CMAKE_BUILD_TYPE RelWithDebInfo)
+
 project(rrttest)
 
 include_directories($ENV{ROS_WORKSPACE}/nice/nice_global_planner/include/)
