--- a/robot_launch/configs/base_local_planner_params.yaml
+++ b/robot_launch/configs/base_local_planner_params.yaml
@@ -4,7 +4,8 @@ TrajectoryPlannerROS:
   max_rotational_vel: 1.0
   min_in_place_rotational_vel: 0.4
 
-  acc_lim_th: 3.2
+  # acc_lim_th: 3.2
+  acc_lim_th: 20.0
   acc_lim_x: 2.5
   acc_lim_y: 2.5
 
