--- a/robot_launch/configs/base_local_planner_params.yaml
+++ b/robot_launch/configs/base_local_planner_params.yaml
@@ -1,13 +1,16 @@
 TrajectoryPlannerROS:
-  max_vel_x: 0.45
+  # max_vel_x: 0.45
+  max_vel_x: 0.80
   min_vel_x: 0.1
   max_rotational_vel: 1.0
   min_in_place_rotational_vel: 0.4
 
   # acc_lim_th: 3.2
   acc_lim_th: 20.0
-  acc_lim_x: 2.5
-  acc_lim_y: 2.5
+  # acc_lim_x: 2.5
+  acc_lim_x: 5.0
+  # acc_lim_y: 2.5
+  acc_lim_y: 5.0
 
   holonomic_robot: true
   path_distance_bias: 0.75
